@@ -16,23 +16,20 @@ import android.util.Log;
 import android.view.MotionEvent;
 import android.view.View;
 import android.view.Window;
-import android.webkit.SslErrorHandler;
-import android.webkit.WebChromeClient;
-import android.webkit.WebSettings;
-import android.webkit.WebView;
-import android.webkit.WebViewClient;
 
-import org.apache.http.HttpResponse;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.impl.client.DefaultHttpClient;
 import org.json.JSONException;
 import org.json.JSONObject;
 
+import java.io.BufferedInputStream;
 import java.io.BufferedReader;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URI;
+import java.net.HttpURLConnection;
+import java.net.URL;
+
+
+import org.xwalk.core.XWalkPreferences;
+import org.xwalk.core.XWalkView;
 
 import android.provider.Settings.Secure;
 
@@ -75,8 +72,8 @@ public class NOCDisplay extends Activity {
 
     public void OpenURL(String URL){
         try {
-            WebView webView = (WebView) findViewById(R.id.fullscreen_content);
-            webView.loadUrl(URL);
+            XWalkView xWalkWebView =(XWalkView)findViewById(R.id.xwalkWebView);
+            xWalkWebView.load(URL, null);
         }
         catch (Exception e) {
             Log.e("URL Error:", e.toString());
@@ -98,29 +95,30 @@ public class NOCDisplay extends Activity {
                 // Get Device ID
                 String android_id = Secure.getString(mContext.getContentResolver(),
                         Secure.ANDROID_ID);
-
                 Log.d("DEVICE_ID", android_id);
 
-                HttpClient client = new DefaultHttpClient();
-                HttpGet request = new HttpGet();
-                request.setURI(new URI("http://ELASTICSEARCHSERVER:9200/quickdash/" + android_id + "/1/"));
+                URL url =  new URL("http://ELASTICSEARCHSERVER:9200/quickdash/" + android_id + "/1/");
+                HttpURLConnection httpuc = (HttpURLConnection) url.openConnection();
 
-                HttpResponse response = client.execute(request);
-                InputStream ips = response.getEntity().getContent();
-
+                // Read the data by using a StringBuilder
+                InputStream ips = new BufferedInputStream(httpuc.getInputStream());
                 BufferedReader reader = new BufferedReader(new InputStreamReader(ips));
                 StringBuilder sb = new StringBuilder();
-
                 String line = null;
                 while ((line = reader.readLine()) != null) {
                     sb.append(line + "\n");
-                }
 
+                }
+                httpuc.disconnect();
+
+                // convert to a JSONObject to return
                 JSONObject jconf = new JSONObject(sb.toString());
                 return jconf;
 
+
+
             } catch (Exception e) {
-                Log.e("Failed to get the JSON config", e.toString());
+                Log.e("Failed to get JSON", e.toString());
                 e.printStackTrace();
                 return new JSONObject();
             }
@@ -161,30 +159,10 @@ public class NOCDisplay extends Activity {
         setContentView(R.layout.activity_nocdisplay);
 
         final View controlsView = findViewById(R.id.fullscreen_content_controls);
-        final View contentView = findViewById(R.id.fullscreen_content);
+        final View contentView = findViewById(R.id.xwalkWebView);
 
-        WebView webView = (WebView) findViewById(R.id.fullscreen_content);
-        webView.getSettings().setJavaScriptEnabled(true);
-
-        //webView.getSettings().setUseWideViewPort(true);
-        webView.getSettings().setJavaScriptCanOpenWindowsAutomatically(true);
-        webView.getSettings().setDomStorageEnabled(true);
-        webView.setWebChromeClient(new WebChromeClient());
-
-        webView.setWebViewClient(new WebViewClient() {
-                                     @Override
-                                     public boolean shouldOverrideUrlLoading(WebView view, String url) {
-                                         view.loadUrl(url);
-                                         return false; // then it is not handled by default action
-                                     }
-
-                                     @Override
-                                     public void onReceivedSslError(WebView view, SslErrorHandler handler, SslError error) {
-                                         Log.d("SSL", "ERROR "+ error);
-                                         handler.proceed(); // Ignore SSL certificate errors
-                                     }
-                                 }
-        );
+        XWalkView xWalkWebView =(XWalkView)findViewById(R.id.xwalkWebView);
+        XWalkPreferences.setValue(XWalkPreferences.REMOTE_DEBUGGING, true);
 
         JSONConfig jdata = new JSONConfig(this);
         jdata.execute();
